--- a/static/stat566/hw_stat566.Rmd
+++ b/static/stat566/hw_stat566.Rmd
@@ -1170,7 +1170,7 @@ The results of ANOVA show that, Only the Heats nested in the Chemistry have sign
 
 The results of variance components and condidence intervals show that only Heats nested in the Chemistry have significant variance on average value of Hardness at 0.05 significance level. The variance is $96.29$ and the confidence intervale is $[88.05946,339.6649]$ at 0.05 significance level.
 
-Based on these result, next experiment could neglect the factor of Ingot. A crossed factorial design, including Chemistry and Heat can examine the main effects and interaction effects more clear.
+Based on these result, The Chemistry and Ingot don't have significant effect on Hardness. The factory should be informed to check and adjust Heat to reduce heat to heat variance.
 
 (d) Check model assumptions.
 
